# fastapi

./: .gitignore  Cargo.toml  README.md
.github/actions/gitlog/: gitlog.sh
.github/workflows/: build.yaml  draft.yaml
cargo/: Cargo.toml  build.rs
cargo/lib/: Cargo.toml
cargo/src/: main.rs
examples/: README.md
examples/actix-web-multiple-api-docs-with-scopes/: Cargo.toml
examples/actix-web/multiple-api-docs/: README.md
examples/actix-web/multiple-api-docs/src/: main.rs
examples/actix-web/scopes-binding/: Cargo.toml  README.md
examples/actix-web/scopes-binding/src/: main.rs
examples/axum/: fastapi-docker
examples/axum-fastapi-bindings/: Cargo.toml
examples/axum-fastapi-bindings/src/: main.rs
examples/axum-fastapi-nesting-vendored/src/: main.rs
examples/axum/fastapi-bindings/: README.md
examples/axum/fastapi-bindings/src/: main.rs
examples/axum/nesting-vendored/: Cargo.toml  Dockerfile  README.md
examples/fastapi-config-test/: README.md
examples/generic/raw-json/: Cargo.toml
examples/generic/todo/axum/src/: main.rs
examples/generic/todo/tide/: Cargo.toml  README.md
examples/generic/todo/warp/: Cargo.toml  README.md
examples/generic/todo/warp-rapidoc/: Cargo.toml  README.md
examples/generic/todo/warp/src/: main.rs
examples/generics-actix/: Cargo.toml  README.md
examples/generics-actix/src/: main.rs
examples/raw-json-actix/: README.md
examples/raw-json-actix/src/: main.rs
examples/rocket-todo/: README.md
examples/rocket-todo/src/: main.rs
examples/rocket/todo/: Cargo.toml
examples/rocket/todo/src/: main.rs
examples/simple-axum/: Cargo.toml
examples/simple-axum/src/: main.rs
examples/todo-actix/: Cargo.toml  README.md
examples/todo-actix/src/: main.rs  todo.rs
examples/todo-axum/: Cargo.toml  README.md
examples/todo-axum/src/: main.rs
examples/todo-tide/src/: main.rs
examples/todo-warp-rapidoc/src/: main.rs
examples/todo-warp-redoc-with-file-config/: build.rs
examples/todo-warp-redoc-with-file-config/src/: main.rs
examples/todo-warp/src/: main.rs
examples/warp-multiple-api-docs/: Cargo.toml
examples/warp-multiple-api-docs/src/: main.rs
examples/warp/multiple-api-docs/: README.md
examples/warp/redoc-with-file-config/: Cargo.toml  README.md
examples/warp/redoc-with-file-config/src/: main.rs
fastapi/: Cargo.toml
fastapi-actix-web/: Cargo.toml  README.md
fastapi-actix-web/src/: lib.rs  scope.rs  service_config.rs
fastapi-axum/: Cargo.toml  README.md
fastapi-axum/src/: lib.rs  router.rs
fastapi-config/: Cargo.toml  README.md
fastapi-config/config-test-crate/: Cargo.toml  README.md  build.rs
fastapi-config/config-test-crate/src/: main.rs
fastapi-config/config-test-crate/tests/: config.rs
fastapi-config/src/: lib.rs
fastapi-gen/: Cargo.toml
fastapi-gen/src/: component.rs  ext.rs  lib.rs  openapi.rs  path.rs  schema_type.rs  security_requirement.rs
fastapi-gen/src/component/: into_params.rs  schema.rs
fastapi-gen/src/component/features/: attributes.rs
fastapi-gen/src/component/schema/: enums.rs  xml.rs
fastapi-gen/src/ext/: rocket.rs
fastapi-gen/src/openapi/: info.rs
fastapi-gen/src/path/: example.rs  media_type.rs  parameter.rs  request_body.rs  response.rs
fastapi-gen/src/path/response/: derive.rs  header.rs  link.rs
fastapi-gen/tests/: fastapi_gen_test.rs  modify_test.rs  openapi_derive.rs  openapi_derive_test.rs  path_derive.rs  path_derive_actix.rs  path_derive_auto_into_responses.rs  path_derive_auto_into_responses_actix.rs  path_derive_auto_into_responses_axum.rs  path_derive_axum_test.rs  path_derive_rocket.rs  path_parameter_derive_actix.rs  path_parameter_derive_test.rs  path_response_derive_test.rs  request_body_derive_test.rs  response_derive_test.rs  schema_derive_test.rs  schema_generics.rs
fastapi-rapidoc/: Cargo.toml  README.md
fastapi-rapidoc/src/: lib.rs
fastapi-redoc/: Cargo.toml  README.md
fastapi-redoc/src/: lib.rs
fastapi-scalar/: Cargo.toml  README.md
fastapi-scalar/src/: lib.rs
fastapi-swagger-ui/: Cargo.toml  README.md  build.rs
fastapi-swagger-ui-vendored/: Cargo.toml  README.md
fastapi-swagger-ui-vendored/src/: lib.rs
fastapi-swagger-ui/src/: actix.rs  axum.rs  lib.rs  oauth.rs  rocket.rs
fastapi/src/: lib.rs  openapi.rs
fastapi/src/openapi/: example.rs  external_docs.rs  header.rs  info.rs  path.rs  request_body.rs  response.rs  schema.rs  security.rs  server.rs  xml.rs
scripts/: doc.sh  test.sh  update-swagger-ui.sh
tests/: test_cargo.py
