[package]
name = "fastapi-config"
description = "Config for controlling fastapi's various aspects"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["fastapi", "config", "fastapi-gen", "openapi", "auto-generate"]
repository = "https://github.com/nxpkg/fastapi"
categories = ["web-programming"]
authors = ["Md Sulaiman <dev.sulaiman@icloud.com>"]
rust-version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "doc_cfg"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
