[package]
name = "fastapi-swagger-ui"
description = "Swagger UI for fastapi"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["swagger-ui", "openapi", "documentation"]
repository = "https://github.com/nxpkg/fastapi"
categories = ["web-programming"]
authors = ["Md Sulaiman <dev.sulaiman@icloud.com>"]
rust-version.workspace = true

[features]
default = ["url"]
debug = []
debug-embed = ["rust-embed/debug-embed"]
reqwest = ["dep:reqwest"]
url = ["dep:url"]
vendored = ["dep:fastapi-swagger-ui-vendored"]
# cache swagger ui zip
cache = ["dep:dirs", "dep:sha2"]

[dependencies]
rust-embed = { version = "8" }
mime_guess = { version = "2.0" }
actix-web = { version = "4", optional = true, default-features = false }
rocket = { version = "0.5", features = ["json"], optional = true }
axum = { version = "0.7", default-features = false, features = [
    "json",
], optional = true }
fastapi = { version = "0.1.1", path = "../fastapi", default-features = false, features = [
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
axum-test = "16.2.0"
similar = "2.5"
tokio = { version = "1", features = ["macros"] }
fastapi-swagger-ui = { path = ".", features = ["actix-web", "axum", "rocket"] }

[package.metadata.docs.rs]
features = ["actix-web", "axum", "rocket", "vendored", "cache"]
no-default-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[build-dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1.7"

# used by cache feature
dirs = { version = "5.0.1", optional = true }
sha2 = { version = "0.10.8", optional = true }

# enabled optionally to allow rust only build with expense of bigger dependency tree and platform
# independent build. By default `curl` system package is tried for downloading the Swagger UI.
reqwest = { version = "0.12", features = [
    "blocking",
    "rustls-tls",
], default-features = false, optional = true }
url = { version = "2", optional = true }
fastapi-swagger-ui-vendored = { version = "0.1.1", path = "../fastapi-swagger-ui-vendored", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
