[package]
name = "axum-fastapi-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
fastapi = { path = "../../fastapi", features = ["axum_extras", "debug"] }
fastapi-swagger-ui = { path = "../../fastapi-swagger-ui", features = ["axum"] }
fastapi-axum = { path = "../../fastapi-axum" ,features = ["debug"] }
serde = "1"
serde_json = "1"

[workspace]
