[package]
name = "todo-actix"
description = "Simple actix-web todo example api with fastapi and Swagger UI, Rapidoc, Redoc, and Scalar"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Example <example@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
futures = "0.3"
fastapi = { path = "../../fastapi", features = ["actix_extras"] }
fastapi-swagger-ui = { path = "../../fastapi-swagger-ui", features = [
    "actix-web",
] }
fastapi-redoc = { path = "../../fastapi-redoc", features = ["actix-web"] }
fastapi-rapidoc = { path = "../../fastapi-rapidoc", features = ["actix-web"] }
fastapi-scalar = { path = "../../fastapi-scalar", features = ["actix-web"] }
fastapi-actix-web = { path = "../../fastapi-actix-web" }

[workspace]
