[package]
name = "todo-axum"
description = "Simple axum todo example api with fastapi and Swagger UI, Rapidoc, Redoc, and Scalar"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Elli Example <example@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.17", features = ["full"] }
tower = "0.5"
fastapi = { path = "../../fastapi", features = ["axum_extras"] }
fastapi-swagger-ui = { path = "../../fastapi-swagger-ui", features = ["axum"] }
fastapi-axum = { path = "../../fastapi-axum" }
fastapi-redoc = { path = "../../fastapi-redoc", features = ["axum"] }
fastapi-rapidoc = { path = "../../fastapi-rapidoc", features = ["axum"] }
fastapi-scalar = { path = "../../fastapi-scalar", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
