[package]
name = "actix-web-scopes-binding"
description = "Simple actix-web demo to demonstrate fastapi-actix-web bidings with scopes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.0"
log = "0.4"
futures = "0.3"
fastapi = { path = "../../fastapi", features = ["actix_extras"] }
fastapi-swagger-ui = { path = "../../fastapi-swagger-ui", features = [
    "actix-web",
] }
fastapi-actix-web = { path = "../../fastapi-actix-web" }

[workspace]
