[package]
name = "raw-json-actix"
description = "Simple actix-web using raw JSON with fastapi and Swagger"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
  "Example <example@example.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
serde_json = "1.0"
fastapi = { path = "../../fastapi", features = ["actix_extras"] }
fastapi-swagger-ui = { path = "../../fastapi-swagger-ui", features = ["actix-web"] }

[workspace]
