[package]
name = "rocket-todo"
description = "Simple rocket todo example api with fastapi and Swagger UI, Rapidoc, Redoc, and Scalar"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Elli Example <example@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
fastapi = { path = "../../fastapi", features = ["rocket_extras"] }
fastapi-swagger-ui = { path = "../../fastapi-swagger-ui", features = ["rocket"] }
fastapi-redoc = { path = "../../fastapi-redoc", features = ["rocket"] }
fastapi-rapidoc = { path = "../../fastapi-rapidoc", features = ["rocket"] }
fastapi-scalar = { path = "../../fastapi-scalar", features = ["rocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[workspace]
